Add unique name for backend endpoint functions
